--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@
 
 stages:
   - check
+  - build
 
 services:
   - docker:dind
@@ -17,3 +18,14 @@ check:
   script:
     - docker info
     - docker version
+
+# The following job build and push the Docker image of.
+build:
+  stage: build
+  image: docker:19
+  before_script:
+    - docker login -u $GITLAB_USER -p $GITLAB_PASSWORD registry.gitlab.com
+  script:
+    - docker build -t registry.gitlab.com/aptitude1/python-toolbox/pytb:0.1 -t registry.gitlab.com/aptitude1/python-toolbox/pytb:latest .
+    - docker push registry.gitlab.com/aptitude1/python-toolbox/pytb:0.1
+    - docker push registry.gitlab.com/aptitude1/python-toolbox/pytb:latest
