--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mbtracker"]
 	path = mbtracker
-	url = https://gitlab.com/aptitude1/python-toolbox/tracking/bboxes/mbtracker.git
+	url = ../tracking/bboxes/mbtracker.git
