--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "yolo"]
 	path = yolo
-	url = https://gitlab.com/aptitude1/python-toolbox/detection/bboxes/yolo.git
+	url = ../detection/bboxes/yolo.git
