--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,3 +1,4 @@
+wheel==0.36.2
 numpy~=1.19.3
 scikit-image~=0.17.2
 filterpy~=1.4.5
@@ -6,8 +7,12 @@ tensorflow~=2.4.0
 pillow~=8.0.1
 setuptools~=50.3.2
 PyTurboJPEG==1.4.1
-lap==0.4.0
-torch==1.7.1+cu110 -f https://download.pytorch.org/whl/torch_stable.html
-torchvision==0.8.2+cu110 -f https://download.pytorch.org/whl/torch_stable.html
-torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html
-detectron2 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu110/torch1.7/index.html # not working on Windows 10
+h5py~=2.9
+tqdm~=4.62.3
+pykalman~=0.9.5
+
+# Uncomment the following for Linux not on docker
+#torch==1.7.1+cu110 -f https://download.pytorch.org/whl/torch_stable.html \
+#torchvision==0.8.2+cu110 -f https://download.pytorch.org/whl/torch_stable.html \
+#torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html \
+#detectron2 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu110/torch1.7/index.html #Not working on Windows 10
