Added parameters validation, logger, license

--- a/.gitignore
+++ b/.gitignore
@@ -147,7 +147,7 @@ configs/*
 !configs/detect-DM-docker.json
 !configs/track-sort.json
 !configs/track-deepsort-docker.json
-!configs/classes.json
+!configs/classes-mio.json
 
 videos/
 
