--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -7,7 +7,7 @@ tensorflow-gpu==2.8.2
 pillow==9.0.1
 PyTurboJPEG==1.6.6
 h5py==3.6.0
-tqdm==4.63.0
+tqdm==4.64.0
 pykalman==0.9.5
 coloredlogs==15.0.1
 pyyaml==6.0
@@ -16,3 +16,4 @@ requests==2.27.1
 ffmpeg-python==0.2.0
 sphinx==4.4.0
 sphinx_rtd_theme==1.0.0
+ultralytics==8.0.58
